Contact form styling. Fixed page section bg. Added 'huge' spacing.

--- a/src/assets/scss/components/_contact-box.scss
+++ b/src/assets/scss/components/_contact-box.scss
@@ -19,6 +19,10 @@
 
     .scroll-top {
         align-self: center;
+
+        @include bp(m) {
+            transform: translateY(-15px);
+        }
     }
 }
 
@@ -57,7 +61,7 @@
         transform: scale(0);
         max-width: 0;
         overflow: hidden;
-        transition: transform $transition-regular;
+        transition: transform $transition-regular, margin-left $transition-regular, max-width $transition-regular;
         transform-origin: right;
     }
 
@@ -95,35 +99,29 @@
 .contact-box__input {
     @include spacing(margin, s, bottom);
 
+    position: relative;
     flex: 1;
 
     label {
+        @include spacing(margin, xs, bottom);
         @include text(p2);
 
+        display: inline-flex;
         color: var(--font-dark);
     }
 
     input, textarea {
-        @include spacing(margin, xs, top);
         @include text(p3);
 
         width: 100%;
         padding: 10px;
-        border: none;
+        padding-left: 15px;
         outline: none;
         border-radius: $border-radius-default;
         color: var(--font-dark);
         caret-color: var(--accent);
-        background: var(--background-darkest);
-
-        // overwrite autofill styles
-        &:-webkit-autofill,
-        &:-webkit-autofill:hover,
-        &:-webkit-autofill:focus,
-        &:-webkit-autofill:active {
-            transition: background-color 5000s ease-in-out 0s;
-            -webkit-text-fill-color: var(--font-dark) !important;
-        }
+        background: var(--background-dark);
+        border: none;
     }
 
     textarea {
@@ -133,6 +131,22 @@
 
     @include bp(m) {
         margin-right: 20px;
+    }
+
+    > div {
+        display: flex;
+        position: relative;
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 1px;
+            height: 100%;
+            background: var(--font-dark);
+            border-radius: $border-radius-default 0 0 $border-radius-default;
+        }
     }
 }
 
