--- a/src/assets/scss/settings/_variables.scss
+++ b/src/assets/scss/settings/_variables.scss
@@ -52,6 +52,7 @@ $spacings: (
     m: 20px 20px 22px 24px 28px,
     l: 30px 30px 35px 35px 40px,
     xl: 20px 40px 75px 140px 260px,
+    huge: 20px 40px 50px 50px 55px,
     headline: 25px 35px 35px 40px 40px,
 );
 
